--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #434455;
 }
 .header-contacts-link:hover,
 .header-contacts-link:focus {
