--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --main-color: #2e2f42;
   --second-color: #4d5ae5;
   --hover-color: #404bbf;
+  --text-color: #434455;
 }
 
 body {
@@ -17,6 +18,14 @@ body {
 .list {
   list-style: none;
 }
+
+.text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
 /** ---------------------HEADER------------------ */
 .header {
 }
@@ -29,7 +38,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--second-color)
+  color: var(--second-color);
 }
 
 .header-logo-part {
@@ -82,6 +91,7 @@ body {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
+  text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
 }
@@ -181,9 +191,6 @@ body {
 }
 
 .team-list-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 }
 
 /** ---------------------FOOTER------------------ */
@@ -203,7 +210,7 @@ body {
 }
 
 .footer-logo-part {
-  color: #f4f4fd ;
+  color: #f4f4fd;
 }
 
 .footer-text {
@@ -231,7 +238,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--second-color);
-  background-color: #F4F4FD;
+  background-color: #f4f4fd;
   cursor: pointer;
 }
 
@@ -256,7 +263,5 @@ body {
 }
 
 .projects-list-text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  color: var(--text-color);
 }
